Refacor code structure and add ResNet implementation.

--- a/notebooks/ekholabs/kaggle-mnist-challenge.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Neural Network in Keras"
+    "# Kaggle MNIST Challenge"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bulding a Deep Neural Network to classify MNIST digits."
+    "Using a Deep Neural Network to classify digits for the Kaggle MNIST challenge."
    ]
   },
   {
@@ -139,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/deepnet-mnist-relu-20-epochs\")"
+    "tensorboard = TensorBoard(\"../logs/deepnet-mnist-relu-20-epochs\")"
    ]
   },
   {
