--- a/notebooks/tensorflow/lenet5-in-tensorflow.ipynb
+++ b/notebooks/tensorflow/lenet5-in-tensorflow.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LeNet-5 in TF"
+    "# LeNet-5 in Tensorflow"
    ]
   },
   {
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,20 +50,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
-      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot = True)"
@@ -71,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,36 +313,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training for 10 epochs.\n",
-      "Step 1 of 429 in epoch 1.\n",
-      "Step 41 of 429 in epoch 1.\n",
-      "Step 81 of 429 in epoch 1.\n",
-      "Step 121 of 429 in epoch 1.\n",
-      "Step 161 of 429 in epoch 1.\n",
-      "Step 201 of 429 in epoch 1.\n",
-      "Step 241 of 429 in epoch 1.\n",
-      "Step 281 of 429 in epoch 1.\n",
-      "Step 321 of 429 in epoch 1.\n",
-      "Step 361 of 429 in epoch 1.\n",
-      "Step 401 of 429 in epoch 1.\n",
-      "Epoch 001: cost = 0.257, accuracy = 92.17%\n",
-      "Step 1 of 429 in epoch 2.\n",
-      "Step 41 of 429 in epoch 2.\n",
-      "Step 81 of 429 in epoch 2.\n",
-      "Step 121 of 429 in epoch 2.\n",
-      "Step 161 of 429 in epoch 2.\n",
-      "Step 201 of 429 in epoch 2.\n",
-      "Step 241 of 429 in epoch 2.\n",
-      "Step 281 of 429 in epoch 2.\n",
-      "Step 321 of 429 in epoch 2.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as session:\n",
     "    session.run(initializer_op)\n",
