ResNet-E got 99.45 accuracy on validation set.

--- a/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLUs.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLUs.ipynb
@@ -313,7 +313,7 @@
     "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'e')\n",
     "\n",
     "    # AVGPOOL\n",
-    "    X = AveragePooling2D(pool_size = 1, name = 'max_pool')(X)\n",
+    "    X = MaxPooling2D(pool_size = 1, name = 'max_pool')(X)\n",
     "    \n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
@@ -770,23 +770,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "1000/1000 [==============================] - 483s - loss: 0.7163 - acc: 0.8134 - val_loss: 0.3115 - val_acc: 0.9093\n",
-      "Epoch 2/3\n",
-      "1000/1000 [==============================] - 881s - loss: 0.2280 - acc: 0.9315 - val_loss: 0.2519 - val_acc: 0.9261\n",
-      "Epoch 3/3\n",
-      "1000/1000 [==============================] - 458s - loss: 0.1821 - acc: 0.9446 - val_loss: 0.1537 - val_acc: 0.9560\n"
+      "Epoch 1/30\n",
+      "3000/3000 [==============================] - 1392s - loss: 0.3849 - acc: 0.8942 - val_loss: 0.1458 - val_acc: 0.9570\n",
+      "Epoch 2/30\n",
+      "3000/3000 [==============================] - 1397s - loss: 0.1523 - acc: 0.9538 - val_loss: 0.1326 - val_acc: 0.9614\n",
+      "Epoch 3/30\n",
+      "3000/3000 [==============================] - 1351s - loss: 0.1167 - acc: 0.9647 - val_loss: 0.1614 - val_acc: 0.9527\n",
+      "Epoch 4/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0930 - acc: 0.9716 - val_loss: 0.0924 - val_acc: 0.9722\n",
+      "Epoch 5/30\n",
+      "3000/3000 [==============================] - 1347s - loss: 0.0793 - acc: 0.9761 - val_loss: 0.0761 - val_acc: 0.9779\n",
+      "Epoch 6/30\n",
+      "3000/3000 [==============================] - 1350s - loss: 0.0665 - acc: 0.9793 - val_loss: 0.0691 - val_acc: 0.9776\n",
+      "Epoch 7/30\n",
+      "3000/3000 [==============================] - 1350s - loss: 0.0578 - acc: 0.9823 - val_loss: 0.0535 - val_acc: 0.9832\n",
+      "Epoch 8/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0520 - acc: 0.9840 - val_loss: 0.0536 - val_acc: 0.9838\n",
+      "Epoch 9/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0463 - acc: 0.9855 - val_loss: 0.0575 - val_acc: 0.9820\n",
+      "Epoch 10/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0411 - acc: 0.9873 - val_loss: 0.0506 - val_acc: 0.9839\n",
+      "Epoch 11/30\n",
+      "3000/3000 [==============================] - 1351s - loss: 0.0389 - acc: 0.9880 - val_loss: 0.0470 - val_acc: 0.9868\n",
+      "Epoch 12/30\n",
+      "3000/3000 [==============================] - 1347s - loss: 0.0354 - acc: 0.9887 - val_loss: 0.0374 - val_acc: 0.9881\n",
+      "Epoch 13/30\n",
+      "3000/3000 [==============================] - 1348s - loss: 0.0325 - acc: 0.9895 - val_loss: 0.0412 - val_acc: 0.9867\n",
+      "Epoch 14/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0304 - acc: 0.9904 - val_loss: 0.0345 - val_acc: 0.9900\n",
+      "Epoch 15/30\n",
+      "3000/3000 [==============================] - 1348s - loss: 0.0285 - acc: 0.9906 - val_loss: 0.0401 - val_acc: 0.9876\n",
+      "Epoch 16/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0264 - acc: 0.9917 - val_loss: 0.0363 - val_acc: 0.9887\n",
+      "Epoch 17/30\n",
+      "3000/3000 [==============================] - 1348s - loss: 0.0244 - acc: 0.9922 - val_loss: 0.0350 - val_acc: 0.9891\n",
+      "Epoch 18/30\n",
+      "3000/3000 [==============================] - 1350s - loss: 0.0228 - acc: 0.9925 - val_loss: 0.0333 - val_acc: 0.9898\n",
+      "Epoch 19/30\n",
+      "3000/3000 [==============================] - 1349s - loss: 0.0216 - acc: 0.9931 - val_loss: 0.0373 - val_acc: 0.9885\n",
+      "Epoch 20/30\n",
+      "3000/3000 [==============================] - 1351s - loss: 0.0204 - acc: 0.9935 - val_loss: 0.0315 - val_acc: 0.9904\n",
+      "Epoch 21/30\n",
+      "3000/3000 [==============================] - 1348s - loss: 0.0189 - acc: 0.9935 - val_loss: 0.0303 - val_acc: 0.9912\n",
+      "Epoch 22/30\n",
+      "3000/3000 [==============================] - 1387s - loss: 0.0193 - acc: 0.9936 - val_loss: 0.0352 - val_acc: 0.9895\n",
+      "Epoch 23/30\n",
+      "3000/3000 [==============================] - 1455s - loss: 0.0182 - acc: 0.9941 - val_loss: 0.0289 - val_acc: 0.9913\n",
+      "Epoch 24/30\n",
+      "3000/3000 [==============================] - 1408s - loss: 0.0167 - acc: 0.9943 - val_loss: 0.0293 - val_acc: 0.9909\n",
+      "Epoch 25/30\n",
+      "3000/3000 [==============================] - 1405s - loss: 0.0155 - acc: 0.9947 - val_loss: 0.0301 - val_acc: 0.9909\n",
+      "Epoch 26/30\n",
+      "3000/3000 [==============================] - 5253s - loss: 0.0152 - acc: 0.9949 - val_loss: 0.0286 - val_acc: 0.9908\n",
+      "Epoch 27/30\n",
+      "3000/3000 [==============================] - 1513s - loss: 0.0148 - acc: 0.9952 - val_loss: 0.0304 - val_acc: 0.9914\n",
+      "Epoch 28/30\n",
+      "3000/3000 [==============================] - 1493s - loss: 0.0153 - acc: 0.9950 - val_loss: 0.0288 - val_acc: 0.9908\n",
+      "Epoch 29/30\n",
+      "3000/3000 [==============================] - 1476s - loss: 0.0150 - acc: 0.9951 - val_loss: 0.0331 - val_acc: 0.9898\n",
+      "Epoch 30/30\n",
+      "3000/3000 [==============================] - 1417s - loss: 0.0138 - acc: 0.9955 - val_loss: 0.0294 - val_acc: 0.9914\n"
      ]
     }
    ],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 1000,\n",
-    "                           epochs = 3,\n",
+    "                           steps_per_epoch = 3000,\n",
+    "                           epochs = 30,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 500,\n",
-    "                           callbacks = [annealer])#, tensorboard])\n",
+    "                           validation_steps = 1500,\n",
+    "                           callbacks = [annealer, tensorboard])\n",
     "\n",
     "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
     "#                            epochs = 40,\n",
@@ -811,7 +865,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0891, final accuracy: 0.9757\n"
+      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0185, final accuracy: 0.9945\n"
      ]
     }
    ],
@@ -839,7 +893,7 @@
     "# predictions = model.predict(X_test, verbose = 2)\n",
     "# predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-30-epochs-batch-32-ResNet-E-data-augmentation.csv', index = False, header = True)"
+    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-30-epochs-batch-30-ResNet-E-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
