--- a/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLU.ipynb
@@ -285,10 +285,9 @@
     "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'c')\n",
     "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'd')\n",
     "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'e')\n",
-    "    \n",
     "\n",
     "    # AVGPOOL\n",
-    "    X = AveragePooling2D(pool_size = 1, name = 'max_pool')(X)\n",
+    "    X = AveragePooling2D(pool_size = 1, name = 'avg_pool')(X)\n",
     "    \n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
@@ -635,9 +634,9 @@
       "____________________________________________________________________________________________________\n",
       "activation_43 (Activation)       (None, 1, 1, 512)     0           add_14[0][0]                     \n",
       "____________________________________________________________________________________________________\n",
-      "max_pool (AveragePooling2D)      (None, 1, 1, 512)     0           activation_43[0][0]              \n",
+      "avg_pool (AveragePooling2D)      (None, 1, 1, 512)     0           activation_43[0][0]              \n",
       "____________________________________________________________________________________________________\n",
-      "flatten_1 (Flatten)              (None, 512)           0           max_pool[0][0]                   \n",
+      "flatten_1 (Flatten)              (None, 512)           0           avg_pool[0][0]                   \n",
       "____________________________________________________________________________________________________\n",
       "fc10 (Dense)                     (None, 10)            5130        flatten_1[0][0]                  \n",
       "====================================================================================================\n",
@@ -726,7 +725,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/lenet-cnn-mnist-ReLU-40-epochs-batch-64-EkhoNet8-data-augmentation\")"
+    "tensorboard = TensorBoard(\"../logs/resnet-mnist-ReLU-30-epochs-batch-32-ResNet-E-data-augmentation\")"
    ]
   },
   {
@@ -745,23 +744,77 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/3\n",
-      "1000/1000 [==============================] - 488s - loss: 0.9629 - acc: 0.7060 - val_loss: 0.4797 - val_acc: 0.8385\n",
-      "Epoch 2/3\n",
-      "1000/1000 [==============================] - 461s - loss: 0.3029 - acc: 0.9070 - val_loss: 0.2917 - val_acc: 0.9061\n",
-      "Epoch 3/3\n",
-      "1000/1000 [==============================] - 440s - loss: 0.2001 - acc: 0.9372 - val_loss: 0.1994 - val_acc: 0.9389\n"
+      "Epoch 1/30\n",
+      "3000/3000 [==============================] - 1347s - loss: 0.4938 - acc: 0.8517 - val_loss: 0.1448 - val_acc: 0.9568\n",
+      "Epoch 2/30\n",
+      "3000/3000 [==============================] - 1348s - loss: 0.1834 - acc: 0.9483 - val_loss: 0.1437 - val_acc: 0.9574\n",
+      "Epoch 3/30\n",
+      "3000/3000 [==============================] - 1298s - loss: 0.2116 - acc: 0.9415 - val_loss: 0.1488 - val_acc: 0.9566\n",
+      "Epoch 4/30\n",
+      "3000/3000 [==============================] - 1308s - loss: 0.1073 - acc: 0.9685 - val_loss: 0.1282 - val_acc: 0.9609\n",
+      "Epoch 5/30\n",
+      "3000/3000 [==============================] - 1283s - loss: 0.0895 - acc: 0.9737 - val_loss: 0.0793 - val_acc: 0.9768\n",
+      "Epoch 6/30\n",
+      "3000/3000 [==============================] - 1258s - loss: 0.0723 - acc: 0.9785 - val_loss: 0.0535 - val_acc: 0.9836\n",
+      "Epoch 7/30\n",
+      "3000/3000 [==============================] - 1251s - loss: 0.0597 - acc: 0.9820 - val_loss: 0.0504 - val_acc: 0.9842\n",
+      "Epoch 8/30\n",
+      "3000/3000 [==============================] - 1254s - loss: 0.0511 - acc: 0.9844 - val_loss: 0.0522 - val_acc: 0.9842\n",
+      "Epoch 9/30\n",
+      "3000/3000 [==============================] - 1252s - loss: 0.0458 - acc: 0.9858 - val_loss: 0.0753 - val_acc: 0.9824\n",
+      "Epoch 10/30\n",
+      "3000/3000 [==============================] - 1250s - loss: 0.0404 - acc: 0.9872 - val_loss: 0.0415 - val_acc: 0.9872\n",
+      "Epoch 11/30\n",
+      "3000/3000 [==============================] - 1250s - loss: 0.0380 - acc: 0.9880 - val_loss: 0.0396 - val_acc: 0.9877\n",
+      "Epoch 12/30\n",
+      "3000/3000 [==============================] - 1250s - loss: 0.0323 - acc: 0.9899 - val_loss: 0.0389 - val_acc: 0.9878\n",
+      "Epoch 13/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0397 - acc: 0.9889 - val_loss: 0.3381 - val_acc: 0.9651\n",
+      "Epoch 14/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0337 - acc: 0.9900 - val_loss: 0.0335 - val_acc: 0.9895\n",
+      "Epoch 15/30\n",
+      "3000/3000 [==============================] - 1251s - loss: 0.0254 - acc: 0.9923 - val_loss: 0.0343 - val_acc: 0.9893\n",
+      "Epoch 16/30\n",
+      "3000/3000 [==============================] - 1251s - loss: 0.0256 - acc: 0.9923 - val_loss: 0.0366 - val_acc: 0.9884\n",
+      "Epoch 17/30\n",
+      "3000/3000 [==============================] - 1249s - loss: 0.0237 - acc: 0.9924 - val_loss: 0.0327 - val_acc: 0.9898\n",
+      "Epoch 18/30\n",
+      "3000/3000 [==============================] - 1252s - loss: 0.0231 - acc: 0.9924 - val_loss: 0.0817 - val_acc: 0.9819\n",
+      "Epoch 19/30\n",
+      "3000/3000 [==============================] - 1250s - loss: 0.0202 - acc: 0.9933 - val_loss: 0.0382 - val_acc: 0.9871\n",
+      "Epoch 20/30\n",
+      "3000/3000 [==============================] - 1252s - loss: 0.0207 - acc: 0.9936 - val_loss: 0.0308 - val_acc: 0.9901\n",
+      "Epoch 21/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0179 - acc: 0.9943 - val_loss: 0.0291 - val_acc: 0.9913\n",
+      "Epoch 22/30\n",
+      "3000/3000 [==============================] - 1251s - loss: 0.0179 - acc: 0.9940 - val_loss: 0.0326 - val_acc: 0.9898\n",
+      "Epoch 23/30\n",
+      "3000/3000 [==============================] - 1254s - loss: 0.0174 - acc: 0.9941 - val_loss: 0.0299 - val_acc: 0.9908\n",
+      "Epoch 24/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0156 - acc: 0.9949 - val_loss: 0.0759 - val_acc: 0.9847\n",
+      "Epoch 25/30\n",
+      "3000/3000 [==============================] - 1251s - loss: 0.0155 - acc: 0.9948 - val_loss: 0.1115 - val_acc: 0.9826\n",
+      "Epoch 26/30\n",
+      "3000/3000 [==============================] - 1252s - loss: 0.0142 - acc: 0.9953 - val_loss: 0.0650 - val_acc: 0.9871\n",
+      "Epoch 27/30\n",
+      "3000/3000 [==============================] - 1255s - loss: 0.0140 - acc: 0.9954 - val_loss: 0.0290 - val_acc: 0.9912\n",
+      "Epoch 28/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0145 - acc: 0.9954 - val_loss: 0.0265 - val_acc: 0.9916\n",
+      "Epoch 29/30\n",
+      "3000/3000 [==============================] - 1253s - loss: 0.0131 - acc: 0.9957 - val_loss: 0.0288 - val_acc: 0.9912\n",
+      "Epoch 30/30\n",
+      "3000/3000 [==============================] - 1256s - loss: 0.0135 - acc: 0.9956 - val_loss: 0.0304 - val_acc: 0.9908\n"
      ]
     }
    ],
    "source": [
     "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 1000,\n",
-    "                           epochs = 3,\n",
+    "                           steps_per_epoch = 3000,\n",
+    "                           epochs = 30,\n",
     "                           verbose = 1,\n",
     "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 500,\n",
-    "                           callbacks = [annealer])#, tensorboard])\n",
+    "                           validation_steps = 1500,\n",
+    "                           callbacks = [annealer, tensorboard])\n",
     "\n",
     "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
     "#                            epochs = 40,\n",
@@ -786,7 +839,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.1267, final accuracy: 0.9605\n"
+      "4200/4200 [==============================] - 6s     \n",
+      "Final loss: 0.0161, final accuracy: 0.9945\n"
      ]
     }
    ],
@@ -814,7 +868,7 @@
     "# predictions = model.predict(X_test, verbose = 2)\n",
     "# predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLU-40-epochs-batch-64-EkhoNet8-data-augmentation.csv', index = False, header = True)"
+    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLU-30-epochs-batch-32-ResNet-E-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
