Latest attempts on the MNIST Kaggle challenge.

--- a/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-resnet-ReLU.ipynb
@@ -83,7 +83,7 @@
    "source": [
     "n_classes = 10\n",
     "\n",
-    "raw_data = np.loadtxt('kaggle/datasets/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
     "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
     "\n",
@@ -862,13 +862,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_test = np.loadtxt('kaggle/datasets/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "# X_test = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "# X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
     "\n",
     "# predictions = model.predict(X_test, verbose = 2)\n",
     "# predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLU-30-epochs-batch-32-ResNet-E-data-augmentation.csv', index = False, header = True)"
+    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLU-30-epochs-batch-32-ResNet-E-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
