Encrypt a few files.

--- a/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-cnn-relu.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a CNN with ReLUs."
+    "Using a CNN with ReLU."
    ]
   },
   {
@@ -41,14 +41,12 @@
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D, Dense, Dropout, Input, Flatten, Activation\n",
-    "from keras.layers import GlobalMaxPooling2D\n",
-    "from keras.layers.normalization import BatchNormalization\n",
     "from keras.layers.merge import Concatenate\n",
     "from keras.models import Model\n",
-    "from keras import initializers\n",
     "from keras.optimizers import Adam\n",
+    "from keras import initializers\n",
     "from keras.callbacks import ModelCheckpoint, Callback, EarlyStopping\n",
-    "from keras.callbacks import TensorBoard\n",
+    "from keras.callbacks import TensorBoard, LearningRateScheduler\n",
     "\n",
     "from sklearn.model_selection import train_test_split"
    ]
@@ -131,23 +129,23 @@
     "#Building the model\n",
     "model = Sequential()\n",
     "#Conv Layer 1\n",
-    "model.add(Conv2D(64, kernel_size = (3, 3), activation = 'ReLU_s', input_shape = (75, 75, 3)))\n",
-    "model.add(MaxPooling2D(pool_size = (3, 3), strides = (2, 2)))\n",
+    "model.add(Conv2D(16, kernel_size = 5, padding = 'same', activation = 'relu', input_shape = (75, 75, 3)))\n",
+    "model.add(MaxPooling2D(pool_size = 2))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Conv Layer 2\n",
-    "model.add(Conv2D(128, kernel_size = (3, 3), activation = 'ReLU_s' ))\n",
-    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Conv2D(32, kernel_size = 5, padding = 'same', activation = 'relu' ))\n",
+    "model.add(MaxPooling2D(pool_size = 2))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Conv Layer 3\n",
-    "model.add(Conv2D(128, kernel_size = (3, 3), activation = 'ReLU_s'))\n",
-    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Conv2D(64, kernel_size = 3, activation = 'relu'))\n",
+    "model.add(MaxPooling2D(pool_size = 2))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Conv Layer 4\n",
-    "model.add(Conv2D(64, kernel_size = (3, 3), activation = 'ReLU_s'))\n",
-    "model.add(MaxPooling2D(pool_size = (2, 2), strides = (2, 2)))\n",
+    "model.add(Conv2D(64, kernel_size = 3, activation = 'relu'))\n",
+    "model.add(MaxPooling2D(pool_size = 2))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Flatten the data for upcoming dense layers\n",
@@ -155,12 +153,12 @@
     "\n",
     "#Dense Layers\n",
     "model.add(Dense(512))\n",
-    "model.add(Activation('ReLU_s'))\n",
+    "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Dense Layer 2\n",
-    "model.add(Dense(256))\n",
-    "model.add(Activation('ReLU_s'))\n",
+    "model.add(Dense(512))\n",
+    "model.add(Activation('relu'))\n",
     "model.add(Dropout(0.2))\n",
     "\n",
     "#Sigmoid Layer\n",
@@ -204,50 +202,50 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 73, 73, 64)        1792      \n",
+      "conv2d_1 (Conv2D)            (None, 75, 75, 16)        1216      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 36, 36, 64)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 37, 37, 16)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 36, 36, 64)        0         \n",
+      "dropout_1 (Dropout)          (None, 37, 37, 16)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 34, 34, 128)       73856     \n",
+      "conv2d_2 (Conv2D)            (None, 37, 37, 32)        12832     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 17, 17, 128)       0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 18, 18, 32)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 17, 17, 128)       0         \n",
+      "dropout_2 (Dropout)          (None, 18, 18, 32)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 15, 15, 128)       147584    \n",
+      "conv2d_3 (Conv2D)            (None, 16, 16, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 7, 7, 128)         0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 8, 8, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 7, 7, 128)         0         \n",
+      "dropout_3 (Dropout)          (None, 8, 8, 64)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 5, 5, 64)          73792     \n",
+      "conv2d_4 (Conv2D)            (None, 6, 6, 64)          36928     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_4 (MaxPooling2 (None, 2, 2, 64)          0         \n",
+      "max_pooling2d_4 (MaxPooling2 (None, 3, 3, 64)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_4 (Dropout)          (None, 2, 2, 64)          0         \n",
+      "dropout_4 (Dropout)          (None, 3, 3, 64)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 256)               0         \n",
+      "flatten_1 (Flatten)          (None, 576)               0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 512)               131584    \n",
+      "dense_1 (Dense)              (None, 512)               295424    \n",
       "_________________________________________________________________\n",
       "activation_2 (Activation)    (None, 512)               0         \n",
       "_________________________________________________________________\n",
       "dropout_5 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 256)               131328    \n",
+      "dense_2 (Dense)              (None, 512)               262656    \n",
       "_________________________________________________________________\n",
-      "activation_3 (Activation)    (None, 256)               0         \n",
+      "activation_3 (Activation)    (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 256)               0         \n",
+      "dropout_6 (Dropout)          (None, 512)               0         \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 1)                 257       \n",
+      "dense_3 (Dense)              (None, 1)                 513       \n",
       "_________________________________________________________________\n",
       "activation_4 (Activation)    (None, 1)                 0         \n",
       "=================================================================\n",
-      "Total params: 560,193\n",
-      "Trainable params: 560,193\n",
+      "Total params: 628,065\n",
+      "Trainable params: 628,065\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -267,11 +265,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"../logs/cnn-iceberg-ReLUs-30-epochs-batch-24\")"
+    "tensorboard = TensorBoard(\"../logs/cnn-iceberg-relu-20-epochs-batch-16-augmentation\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Data Augmentation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_datagen = ImageDataGenerator(zoom_range = 0.1,\n",
+    "                            height_shift_range = 0.1,\n",
+    "                            width_shift_range = 0.1,\n",
+    "                            rotation_range = 10)\n",
+    "\n",
+    "test_datagen = ImageDataGenerator(zoom_range = 0.1,\n",
+    "                            height_shift_range = 0.1,\n",
+    "                            width_shift_range = 0.1,\n",
+    "                            rotation_range = 10)\n",
+    "\n",
+    "train_generator = train_datagen.flow(X_train_cv, y_train_cv, batch_size = 16)\n",
+    "\n",
+    "validation_generator = test_datagen.flow(X_valid, y_valid, batch_size = 16)"
    ]
   },
   {
@@ -283,29 +309,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 1203 samples, validate on 401 samples\n",
-      "Epoch 1/3\n",
-      "1203/1203 [==============================] - 39s - loss: 1.4541 - acc: 0.4813 - val_loss: 0.7772 - val_acc: 0.5287\n",
-      "Epoch 2/3\n",
-      "1203/1203 [==============================] - 39s - loss: 1.4742 - acc: 0.4913 - val_loss: 0.7018 - val_acc: 0.5536\n",
-      "Epoch 3/3\n",
-      " 208/1203 [====>.........................] - ETA: 28s - loss: 1.0492 - acc: 0.5144"
+      "Epoch 1/10\n",
+      "1200/1200 [==============================] - 175s - loss: 0.4993 - acc: 0.7564 - val_loss: 0.4062 - val_acc: 0.8100\n",
+      "Epoch 2/10\n",
+      "1200/1200 [==============================] - 179s - loss: 0.4069 - acc: 0.8056 - val_loss: 0.3676 - val_acc: 0.8365\n",
+      "Epoch 3/10\n",
+      "1200/1200 [==============================] - 176s - loss: 0.3648 - acc: 0.8265 - val_loss: 0.3003 - val_acc: 0.8510\n",
+      "Epoch 4/10\n",
+      "1200/1200 [==============================] - 184s - loss: 0.3193 - acc: 0.8488 - val_loss: 0.3011 - val_acc: 0.8643\n",
+      "Epoch 5/10\n",
+      "1200/1200 [==============================] - 196s - loss: 0.3092 - acc: 0.8523 - val_loss: 0.3123 - val_acc: 0.8570\n",
+      "Epoch 6/10\n",
+      "1200/1200 [==============================] - 179s - loss: 0.2980 - acc: 0.8623 - val_loss: 0.2781 - val_acc: 0.8916\n",
+      "Epoch 7/10\n",
+      "1200/1200 [==============================] - 176s - loss: 0.2937 - acc: 0.8636 - val_loss: 0.2846 - val_acc: 0.8739\n",
+      "Epoch 8/10\n",
+      "1200/1200 [==============================] - 185s - loss: 0.2718 - acc: 0.8735 - val_loss: 0.2934 - val_acc: 0.8742\n",
+      "Epoch 9/10\n",
+      "1200/1200 [==============================] - 179s - loss: 0.2866 - acc: 0.8655 - val_loss: 0.3771 - val_acc: 0.8444\n",
+      "Epoch 10/10\n",
+      "1200/1200 [==============================] - 183s - loss: 0.2685 - acc: 0.8751 - val_loss: 0.2924 - val_acc: 0.8792\n"
      ]
     }
    ],
    "source": [
-    "model.fit(X_train_cv, y_train_cv,\n",
-    "          batch_size = 16,\n",
-    "          epochs = 3,\n",
-    "          verbose = 1,\n",
-    "          validation_data = (X_valid, y_valid))\n",
+    "hist = model.fit_generator(train_generator,\n",
+    "                           steps_per_epoch = 1200,\n",
+    "                           epochs = 10,\n",
+    "                           verbose = 1,\n",
+    "                           validation_data = validation_generator,\n",
+    "                           validation_steps = 400https://www.glassdoor.nl/Reviews/Trifork-Reviews-E486173.htm?countryRedirect=true)\n",
+    "#                            callbacks = [tensorboard])\n",
+    "\n",
+    "# model.fit(X_train_cv, y_train_cv,\n",
+    "#           batch_size = 16,\n",
+    "#           epochs = 3,\n",
+    "#           verbose = 1,\n",
+    "#           validation_data = (X_valid, y_valid))\n",
     "#           callbacks = [tensorboard])"
    ]
   },
@@ -318,9 +365,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384/401 [===========================>..] - ETA: 0sTest loss: 0.269289418052\n",
+      "Test accuracy: 0.887780548777\n"
+     ]
+    }
+   ],
    "source": [
     "score = model.evaluate(X_valid, y_valid, verbose = 1)\n",
     "print('Test loss:', score[0])\n",
@@ -336,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,14 +414,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# submission = pd.DataFrame()\n",
     "# submission['id'] = test['id']\n",
     "# submission['is_iceberg'] = predicted_test.reshape((predicted_test.shape[0]))\n",
-    "# submission.to_csv('kaggle/results/iceberg/submission-cnn-iceberg-ReLUs-30-epochs-batch-24.csv', index = False)"
+    "# submission.to_csv('kaggle/results/iceberg/submission-cnn-iceberg-relu-20-epochs-batch-16-augmentation.csv', index = False)"
    ]
   }
  ],
