--- a/notebooks/ekholabs/kaggle-iceberg-challenge-ResNet-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-iceberg-challenge-ResNet-ReLU.ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Kaggle MNIST Challenge"
+    "# Kaggle Iceberg Detection Challenge"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a Deep Residual Neural Network to classify digits for the Kaggle MNIST challenge."
+    "Using a ResNet with ReLU."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Set seed for reproducibility"
+    "#### Load Dependencies"
    ]
   },
   {
@@ -28,25 +28,10 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "np.random.seed(42)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Load dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "import keras\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Input, Add, Dense, Dropout, Activation, ZeroPadding2D, BatchNormalization, Flatten, Conv2D, AveragePooling2D, MaxPooling2D, GlobalMaxPooling2D\n",
+    "from keras.layers import Input, Add, Dense, Activation, ZeroPadding2D, BatchNormalization, Flatten, Conv2D, AveragePooling2D, MaxPooling2D, GlobalMaxPooling2D, Dropout\n",
     "from keras.models import Model\n",
     "from keras.layers.normalization import BatchNormalization\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
@@ -56,15 +41,14 @@
     "\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "from sklearn.model_selection import train_test_split\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Load data"
+    "#### Load Datasets"
    ]
   },
   {
@@ -73,53 +57,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_classes = 10\n",
+    "train = pd.read_json(\"kaggle/datasets/iceberg/train.json\")\n",
+    "test = pd.read_json(\"kaggle/datasets/iceberg/test.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Parse the Datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_classes = 2\n",
     "\n",
-    "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
+    "X_band_1 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_1\"]])\n",
+    "X_band_2 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_2\"]])\n",
     "\n",
-    "X_train = X_train.reshape(-1, 28, 28, 1)\n",
-    "X_val = X_val.reshape(-1, 28, 28, 1)\n",
+    "X_train = np.concatenate([X_band_1[:, :, :, np.newaxis], X_band_2[:, :, :, np.newaxis],((X_band_1 + X_band_2) / 2)[:, :, :, np.newaxis]], axis = -1)\n",
     "\n",
-    "X_train = X_train.astype(\"float32\")/255.\n",
-    "X_val = X_val.astype(\"float32\")/255.\n",
+    "target_train = train['is_iceberg']\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X_train, target_train, random_state = 42, train_size = 0.75)\n",
     "\n",
     "y_train = keras.utils.to_categorical(y_train, n_classes)\n",
-    "y_val = keras.utils.to_categorical(y_val, n_classes)\n"
+    "y_val = keras.utils.to_categorical(y_val, n_classes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Define Custom Activation Function"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras import backend as K\n",
-    "from keras.utils.generic_utils import get_custom_objects\n",
-    "\n",
-    "def relus(Z):\n",
-    "    e_param = 0.10318\n",
-    "    pi = K.variable((3.14))\n",
-    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
-    "    A = K.maximum(m, Z)\n",
-    "    return A\n",
-    "\n",
-    "get_custom_objects().update({'ReLU_s': Activation(relus)})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### ResNet Identity Block"
+    "#### Identity Block"
    ]
   },
   {
@@ -181,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### ResNet Convolutional Block"
+    "#### Convolutional Block"
    ]
   },
   {
@@ -247,7 +220,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Design Neural Network architecture"
+    "#### Define Custom Activation Function"
    ]
   },
   {
@@ -256,7 +229,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ResNetE(input_shape = (28, 28, 1)):\n",
+    "from keras import backend as K\n",
+    "from keras.utils.generic_utils import get_custom_objects\n",
+    "\n",
+    "def relus(Z):\n",
+    "    e_param = 0.001\n",
+    "    pi = K.variable((3.14))\n",
+    "    m = e_param + (K.sigmoid(K.sin(Z)) - K.sigmoid(K.cos(Z)) * K.exp(K.sqrt(pi)))\n",
+    "    A = K.maximum(m, Z)\n",
+    "    return A\n",
+    "\n",
+    "get_custom_objects().update({'ReLU_s': Activation(relus)})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Build the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ResNet(input_shape = (75, 75, 3)):\n",
     "    \"\"\"\n",
     "    Implementation of the popular ResNet50 the following architecture:\n",
     "    CONV2D -> BATCHNORM -> RELU -> MAXPOOL -> CONVBLOCK -> IDBLOCK -> CONVBLOCK -> IDBLOCK\n",
@@ -277,44 +276,48 @@
     "    X = ZeroPadding2D((3, 3))(X_input)\n",
     "    \n",
     "    # Stage 1\n",
-    "    X = Conv2D(8, kernel_size = 3, name = 'conv1', kernel_initializer = 'he_uniform')(X)\n",
+    "    X = Conv2D(16, kernel_size = 5, strides = 2, name = 'conv1', kernel_initializer = 'he_uniform')(X)\n",
     "    X = BatchNormalization(axis = 3, name = 'bn_conv1')(X)\n",
     "    X = Activation('ReLU_s')(X)\n",
-    "    X = MaxPooling2D(pool_size = 3)(X)\n",
+    "    X = MaxPooling2D(pool_size = 3, strides = (2, 2))(X)\n",
+    "    X = Dropout(0.5)(X)\n",
     "    \n",
     "    # Stage 2\n",
-    "    X = convolutional_block(X, main_path_shape = 3, filters = [16, 16, 24], stage = 2, block = 'a', s = 1)\n",
-    "    X = identity_block(X, 3, [16, 16, 24], stage = 2, block = 'b')\n",
+    "    X = convolutional_block(X, main_path_shape = 3, filters = [32, 64, 64], stage = 2, block = 'a', s = 1)\n",
+    "    X = identity_block(X, 3, [32, 64, 64], stage = 2, block = 'b')\n",
+    "    X = Dropout(0.5)(X)\n",
     "    \n",
     "    # Stage 3\n",
-    "    X = convolutional_block(X, main_path_shape = 3, filters = [24, 24, 32], stage = 3, block = 'a', s = 2)\n",
-    "    X = identity_block(X, 3, [24, 24, 32], stage = 3, block = 'b')\n",
+    "    X = convolutional_block(X, main_path_shape = 3, filters = [64, 64, 128], stage = 3, block = 'a', s = 2)\n",
+    "    X = identity_block(X, 3, [64, 64, 128], stage = 3, block = 'b')\n",
+    "    X = Dropout(0.5)(X)\n",
     "\n",
     "    # Stage 4\n",
-    "    X = convolutional_block(X, main_path_shape = 3, filters = [32, 32, 48], stage = 4, block = 'a', s = 2)\n",
-    "    X = identity_block(X, 3, [32, 32, 48], stage = 4, block='b')\n",
-    "    X = identity_block(X, 3, [32, 32, 48], stage = 4, block='c')\n",
-    "    X = identity_block(X, 3, [32, 32, 48], stage = 4, block='d')\n",
-    "    X = identity_block(X, 3, [32, 32, 48], stage = 4, block='e')\n",
+    "    X = convolutional_block(X, main_path_shape = 3, filters = [128, 128, 256], stage = 4, block = 'a', s = 2)\n",
+    "    X = identity_block(X, 3, [128, 128, 256], stage = 4, block='b')\n",
+    "    X = identity_block(X, 3, [128, 128, 256], stage = 4, block='c')\n",
+    "    X = identity_block(X, 3, [128, 128, 256], stage = 4, block='d')\n",
+    "    X = identity_block(X, 3, [128, 128, 256], stage = 4, block='e')\n",
+    "    X = Dropout(0.5)(X)\n",
     "\n",
     "    # Stage 5\n",
-    "    X = convolutional_block(X, main_path_shape = 3, filters = [48, 48, 64], stage = 5, block = 'a', s = 2)\n",
-    "    X = identity_block(X, 3, [48, 48, 64], stage = 5, block = 'b')\n",
-    "    X = identity_block(X, 3, [48, 48, 64], stage = 5, block = 'c')\n",
-    "    X = identity_block(X, 3, [48, 48, 64], stage = 5, block = 'd')\n",
-    "    X = identity_block(X, 3, [48, 48, 64], stage = 5, block = 'e')\n",
+    "    X = convolutional_block(X, main_path_shape = 3, filters = [265, 256, 512], stage = 5, block = 'a', s = 2)\n",
+    "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'b')\n",
+    "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'c')\n",
+    "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'd')\n",
+    "    X = identity_block(X, 3, [265, 256, 512], stage = 5, block = 'e')\n",
+    "    X = Dropout(0.5)(X)\n",
     "\n",
     "    # AVGPOOL\n",
-    "    X = AveragePooling2D(pool_size = 1, name = 'avg_pool')(X)\n",
+    "    X = MaxPooling2D(pool_size = 1, name = 'max_pool')(X)\n",
     "    \n",
     "    # output layer\n",
     "    X = Flatten()(X)\n",
-    "    X = Dense(512, activation='ReLU_s', name = 'fc1' + str(512), kernel_initializer = 'he_uniform')(X)\n",
-    "    X = Dense(n_classes, activation='softmax', name = 'fc' + str(n_classes), kernel_initializer = 'glorot_uniform')(X)\n",
+    "    X = Dense(n_classes, activation='softmax', name = 'fc' + str(n_classes), kernel_initializer = 'he_uniform')(X)\n",
     "    \n",
     "    \n",
     "    # Create model\n",
-    "    model = Model(inputs = X_input, outputs = X, name = 'ResNetE')\n",
+    "    model = Model(inputs = X_input, outputs = X, name = 'ResNet')\n",
     "\n",
     "    return model"
    ]
@@ -325,8 +328,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = ResNetE()\n",
+    "model = ResNet()\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Compile Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics=['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensorboard = TensorBoard(\"../logs/ResNet-iceberg-relu-20-epochs-batch-16-augmentation\")"
    ]
   },
   {
@@ -361,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Learning Rate Scheduler"
+    "#### Train Model"
    ]
   },
   {
@@ -370,74 +405,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annealer = LearningRateScheduler(lambda x: 1e-3 * 0.9 ** x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Configure model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tensorboard = TensorBoard(\"../logs/resnet-mnist-ReLUs-60-epochs-batch-32-ResNet-E-data-augmentation\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Train!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "hist = model.fit_generator(train_generator,\n",
-    "                           steps_per_epoch = 5000,\n",
-    "                           epochs = 60,\n",
-    "                           verbose = 1,\n",
-    "                           validation_data = validation_generator,\n",
-    "                           validation_steps = 3500,\n",
-    "                           callbacks = [annealer, tensorboard])\n",
-    "\n",
-    "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
-    "#                            epochs = 40,\n",
+    "# hist = model.fit_generator(train_generator,\n",
+    "#                            steps_per_epoch = 3000,\n",
+    "#                            epochs = 2,\n",
     "#                            verbose = 1,\n",
-    "#                            validation_split = 0.1,\n",
-    "#                            callbacks=[annealer, tensorboard])"
+    "#                            validation_data = validation_generator,\n",
+    "#                            validation_steps = 1500)\n",
+    "#                            callbacks = [tensorboard])\n",
+    "\n",
+    "model.fit(X_train_cv, y_train_cv,\n",
+    "          batch_size = 16,\n",
+    "          epochs = 3,\n",
+    "          verbose = 1,\n",
+    "          validation_data = (X_valid, y_valid))\n",
+    "#           callbacks = [tensorboard])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Final Accuracy"
+    "#### Evaluate Model"
    ]
   },
   {
@@ -446,15 +434,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_loss, final_acc = model.evaluate(X_val, y_val, verbose = 1)\n",
-    "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
+    "score = model.evaluate(X_val, y_val, verbose = 1)\n",
+    "print('Test loss:', score[0])\n",
+    "print('Test accuracy:', score[1])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Save Submission"
+    "#### Prepare data for Submission"
    ]
   },
   {
@@ -463,13 +452,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# X_test = np.loadtxt('kaggle/datasets/mnist/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
-    "# X_test = X_test.reshape(28000, 28, 28, 1).astype('float32') / 255.\n",
+    "# X_band_test_1 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in test[\"band_1\"]])\n",
+    "# X_band_test_2 = np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in test[\"band_2\"]])\n",
+    "# X_test = np.concatenate([X_band_test_1[:, :, :, np.newaxis],\n",
+    "#                         X_band_test_2[:, :, :, np.newaxis],\n",
+    "#                         ((X_band_test_1 + X_band_test_2) / 2)[:, :, :, np.newaxis]], axis = -1)\n",
     "\n",
-    "# predictions = model.predict(X_test, verbose = 2)\n",
-    "# predictions = np.argmax(predictions, axis = 1)\n",
-    "\n",
-    "# pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/mnist/submission-ReLUs-30-epochs-batch-64-ResNet-E-data-augmentation.csv', index = False, header = True)"
+    "# predicted_test = model.predict_proba(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Submit"
    ]
   },
   {
@@ -477,7 +473,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# submission = pd.DataFrame()\n",
+    "# submission['id'] = test['id']\n",
+    "# submission['is_iceberg'] = predicted_test.reshape((predicted_test.shape[0]))\n",
+    "# submission.to_csv('kaggle/results/iceberg/submission-cnn-iceberg-relu-20-epochs-batch-16-augmentation.csv', index = False)"
+   ]
   }
  ],
  "metadata": {
