Add changes done during 7-12-17 presentation.

--- a/notebooks/keras/deep-net-in-keras.ipynb
+++ b/notebooks/keras/deep-net-in-keras.ipynb
@@ -119,6 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
     "#### Design Neural Network architecture"
    ]
   },
@@ -128,17 +129,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add Dropout\n",
     "model = Sequential()\n",
-    "# Dense = Fully Connected layer\n",
-    "model.add(Dense((64), activation = 'relu', input_shape = (28 * 28 * 1,)))\n",
+    "model.add(Dense(128, activation = 'relu', input_shape = (28 * 28 * 1,)))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.5))\n",
-    "model.add(Dense((128), activation = 'relu'))\n",
+    "model.add(Dropout(0.15))\n",
+    "model.add(Dense(512, activation = 'relu'))\n",
     "model.add(BatchNormalization())\n",
-    "model.add(Dropout(0.25))\n",
-    "# model.add(Dense((256), activation = 'relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.15))\n",
+    "model.add(Dense(1024, activation = 'relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "\n",
     "model.add(Dense((10), activation = 'softmax'))"
    ]
   },
@@ -164,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/deepnet-mnist-relus-20-epochs\")"
+    "tensorboard = TensorBoard(\"logs/meetup-mnist-20-epochs\")"
    ]
   },
   {
@@ -196,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 20, verbose = 2, validation_split = 0.1)"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 5, verbose = 1, validation_split = 0.1, callbacks=[tensorboard])"
    ]
   },
   {
