--- a/notebooks/keras/intermediate-net-in-keras.ipynb
+++ b/notebooks/keras/intermediate-net-in-keras.ipynb
@@ -47,7 +47,7 @@
     "import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
+    "from keras.layers import Dense, Dropout\n",
     "from keras.optimizers import SGD"
    ]
   },
@@ -122,8 +122,10 @@
    "source": [
     "model = Sequential()\n",
     "# Dense = Fully Connected layer\n",
-    "model.add(Dense((64), activation = 'relu', input_shape = (784,)))\n",
-    "model.add(Dense((10), activation = 'softmax'))"
+    "model.add(Dense(128, activation = 'relu', kernel_initializer='glorot_uniform', input_shape = (784,)))\n",
+    "model.add(Dense(256, activation = 'relu', kernel_initializer='glorot_uniform'))\n",
+    "model.add(Dense(1024, activation = 'relu', kernel_initializer='glorot_uniform'))\n",
+    "model.add(Dense(10, activation = 'softmax'))"
    ]
   },
   {
@@ -148,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer = SGD(lr = 0.1), metrics = ['accuracy'])"
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
    ]
   },
   {
@@ -164,14 +166,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 20, verbose = 1, validation_data = (X_test, y_test))"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 5, verbose = 1, validation_data = (X_test, y_test))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Prediction "
+    "#### Test Predictions"
    ]
   },
   {
@@ -180,23 +182,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import scipy\n",
-    "from PIL import Image\n",
-    "from scipy import ndimage\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "test_image = \"mnist_image_8.jpg\"\n",
-    "\n",
-    "# Preprocess image to fit the algorithm.\n",
-    "fname = \"images/\" + test_image\n",
-    "image = np.array(ndimage.imread(fname, flatten = False))\n",
-    "test_image = image.reshape((1, 28 * 28 * 1))\n",
-    "image_prediction = model.predict_classes(test_image)\n",
-    "\n",
-    "plt.imshow(image)\n",
-    "print(\"The algorithm predicts: y = \" + str(np.squeeze(image_prediction)))"
+    "predictions = model.predict_classes(X_test, verbose = 2)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test Final Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_loss, final_acc = model.evaluate(X_test, y_test, verbose = 1)\n",
+    "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
   },
   {
