--- a/notebooks/keras/lenet-in-keras.ipynb
+++ b/notebooks/keras/lenet-in-keras.ipynb
@@ -133,7 +133,7 @@
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation = 'relu',))\n",
+    "model.add(Dense(128, activation = 'relu'))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Dense(n_classes, activation = 'softmax'))"
@@ -168,22 +168,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### TensorBoard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tensorboard = TensorBoard(\"logs/lenet5-cnn-mnist-20-epochs\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Train!"
    ]
   },
@@ -193,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 1, verbose = 1, validation_split = 0.1, callbacks = [tensorboard])"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 20, verbose = 1, validation_split = 0.1)"
    ]
   },
   {
