--- a/notebooks/keras/alexnet-in-keras.ipynb
+++ b/notebooks/keras/alexnet-in-keras.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.models import Sequential\n",
@@ -62,7 +70,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading Oxford 17 category Flower Dataset, Please wait...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  2.4%  1458176 / 60270631"
+     ]
+    }
+   ],
    "source": [
     "import tflearn.datasets.oxflower17 as oxflower17\n",
     "X, Y = oxflower17.load_data(one_hot = True)"
