Update train data path.

--- a/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs/kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -76,7 +76,7 @@
    "source": [
     "n_classes = 10\n",
     "\n",
-    "raw_data = np.loadtxt('kaggle/datasets/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "raw_data = np.loadtxt('kaggle/datasets/mnist/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
     "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
     "\n",
@@ -105,25 +105,25 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='relu', input_shape = (28, 28, 1)))\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s', input_shape = (28, 28, 1)))\n",
+    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.10))\n",
     "\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='relu'))\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.10))\n",
     "\n",
-    "model.add(Conv2D(28, 2, padding = 'same', activation ='relu'))\n",
-    "model.add(Conv2D(28, 2, padding = 'same', activation ='relu'))\n",
-    "model.add(Conv2D(32, 2, activation ='relu'))\n",
+    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(32, 2, activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dropout(0.10))\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(1024, activation = \"relu\"))\n",
-    "model.add(Dropout(0.25))\n",
+    "model.add(Dense(1024, activation = \"ReLU_s\"))\n",
+    "model.add(Dropout(0.15))\n",
     "model.add(Dense(10, activation = \"softmax\"))"
    ]
   },
